crates/pg_syntax/tests/snapshots/postgres_regress/json@307.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create type jpop2 as (a int, b json, c int, d int);"
---
CompositeTypeStmt@0..51
  Create@0..6 "create"
  Whitespace@6..7 " "
  TypeP@7..11 "type"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "jpop2"
  Whitespace@17..18 " "
  As@18..20 "as"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ColumnDef@22..27
    Ident@22..23 "a"
    Whitespace@23..24 " "
    TypeName@24..27
      IntP@24..27 "int"
  Ascii44@27..28 ","
  Whitespace@28..29 " "
  ColumnDef@29..35
    Ident@29..30 "b"
    Whitespace@30..31 " "
    TypeName@31..35
      Ident@31..35 "json"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ColumnDef@37..42
    Ident@37..38 "c"
    Whitespace@38..39 " "
    TypeName@39..42
      IntP@39..42 "int"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  ColumnDef@44..49
    Ident@44..45 "d"
    Whitespace@45..46 " "
    TypeName@46..49
      IntP@46..49 "int"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

