crates/pg_syntax/tests/snapshots/postgres_regress/json@308.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_populate_recordset(null::jpop2, '[{\"a\":2,\"c\":3,\"b\":{\"z\":4},\"d\":6}]') q;"
---
SelectStmt@0..90
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..89
    List@14..86
      FuncCall@14..86
        Ident@14..37 "json_populate_recordset"
        Ascii40@37..38 "("
        TypeCast@38..49
          AConst@38..42
            NullP@38..42 "null"
          Typecast@42..44 "::"
          TypeName@44..49
            Ident@44..49 "jpop2"
        Ascii44@49..50 ","
        Whitespace@50..51 " "
        AConst@51..86
          Sconst@51..86 "'[{\"a\":2,\"c\":3,\"b\":{\" ..."
    Ascii41@86..87 ")"
    Whitespace@87..88 " "
    Alias@88..89
      Ident@88..89 "q"
  Ascii59@89..90 ";"

