crates/pg_syntax/tests/snapshots/postgres_regress/json@311.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_populate_recordset(row('def',99,null)::jpop,'[{\"a\":[100,200,300],\"x\":43.2},{\"a\":{\"z\":true},\"b\":3,\"c\":\"2012-01-20 10:42:53\"}]') q;"
---
SelectStmt@0..148
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..147
    List@14..144
      FuncCall@14..144
        Ident@14..37 "json_populate_recordset"
        Ascii40@37..38 "("
        TypeCast@38..62
          RowExpr@38..55
            Row@38..41 "row"
            Ascii40@41..42 "("
            AConst@42..47
              Sconst@42..47 "'def'"
            Ascii44@47..48 ","
            AConst@48..50
              Iconst@48..50 "99"
            Ascii44@50..51 ","
            AConst@51..55
              NullP@51..55 "null"
          Ascii41@55..56 ")"
          Typecast@56..58 "::"
          TypeName@58..62
            Ident@58..62 "jpop"
        Ascii44@62..63 ","
        AConst@63..144
          Sconst@63..144 "'[{\"a\":[100,200,300], ..."
    Ascii41@144..145 ")"
    Whitespace@145..146 " "
    Alias@146..147
      Ident@146..147 "q"
  Ascii59@147..148 ";"

