crates/pg_syntax/tests/snapshots/postgres_regress/json@313.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_populate_recordset(row(1,2), '[{\"f1\": 0, \"f2\": 1}]');"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..63
    FuncCall@7..63
      Ident@7..30 "json_populate_recordset"
      Ascii40@30..31 "("
      RowExpr@31..38
        Row@31..34 "row"
        Ascii40@34..35 "("
        AConst@35..36
          Iconst@35..36 "1"
        Ascii44@36..37 ","
        AConst@37..38
          Iconst@37..38 "2"
      Ascii41@38..39 ")"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..63
        Sconst@41..63 "'[{\"f1\": 0, \"f2\": 1}]'"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

