crates/pg_syntax/tests/snapshots/postgres_regress/json@314.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT i, json_populate_recordset(row(i,50), '[{\"f1\":\"42\"},{\"f2\":\"43\"}]')\nFROM (VALUES (1),(2)) v(i);"
---
SelectStmt@0..101
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "i"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..72
    FuncCall@10..72
      Ident@10..33 "json_populate_recordset"
      Ascii40@33..34 "("
      RowExpr@34..42
        Row@34..37 "row"
        Ascii40@37..38 "("
        ColumnRef@38..39
          Ident@38..39 "i"
        Ascii44@39..40 ","
        AConst@40..42
          Iconst@40..42 "50"
      Ascii41@42..43 ")"
      Ascii44@43..44 ","
      Whitespace@44..45 " "
      AConst@45..72
        Sconst@45..72 "'[{\"f1\":\"42\"},{\"f2\":\" ..."
  Ascii41@72..73 ")"
  Newline@73..74 "\n"
  From@74..78 "FROM"
  Whitespace@78..79 " "
  Ascii40@79..80 "("
  RangeSubselect@80..99
    SelectStmt@80..93
      Values@80..86 "VALUES"
      Whitespace@86..87 " "
      Ascii40@87..88 "("
      List@88..89
        AConst@88..89
          Iconst@88..89 "1"
      Ascii41@89..90 ")"
      Ascii44@90..91 ","
      Ascii40@91..92 "("
      List@92..93
        AConst@92..93
          Iconst@92..93 "2"
    Ascii41@93..94 ")"
    Ascii41@94..95 ")"
    Whitespace@95..96 " "
    Alias@96..99
      Ident@96..97 "v"
      Ascii40@97..98 "("
      Ident@98..99 "i"
  Ascii41@99..100 ")"
  Ascii59@100..101 ";"

