crates/pg_syntax/tests/snapshots/postgres_regress/json@317.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_populate_recordset(row(1,2), '[]');"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..30 "json_populate_recordset"
      Ascii40@30..31 "("
      RowExpr@31..38
        Row@31..34 "row"
        Ascii40@34..35 "("
        AConst@35..36
          Iconst@35..36 "1"
        Ascii44@36..37 ","
        AConst@37..38
          Iconst@37..38 "2"
      Ascii41@38..39 ")"
      Ascii44@39..40 ","
      Whitespace@40..41 " "
      AConst@41..45
        Sconst@41..45 "'[]'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

