crates/pg_syntax/tests/snapshots/postgres_regress/json@321.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT json_populate_recordset(row(1,2)::j_ordered_pair, '[{\"x\": 0}, {\"y\": 3}]');"
---
SelectStmt@0..81
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..79
    FuncCall@7..79
      Ident@7..30 "json_populate_recordset"
      Ascii40@30..31 "("
      TypeCast@31..55
        RowExpr@31..38
          Row@31..34 "row"
          Ascii40@34..35 "("
          AConst@35..36
            Iconst@35..36 "1"
          Ascii44@36..37 ","
          AConst@37..38
            Iconst@37..38 "2"
        Ascii41@38..39 ")"
        Typecast@39..41 "::"
        TypeName@41..55
          Ident@41..55 "j_ordered_pair"
      Ascii44@55..56 ","
      Whitespace@56..57 " "
      AConst@57..79
        Sconst@57..79 "'[{\"x\": 0}, {\"y\": 3}]'"
  Ascii41@79..80 ")"
  Ascii59@80..81 ";"

